Add image logo and comment in atelecharger.html

--- a/atelecharger.html
+++ b/atelecharger.html
@@ -11,6 +11,8 @@
       <a href="https://www.youtube.com/channel/UCDB1PaqiausfXbVI2Jjk0iQ" target="_blank">Youtube</a>
       <a href="https://www.youtube.com/@LeNinjaxx" target="_blank">Youtube2</a>
     </nav>
+    <!--bonjour-->                                                                                                                                      
+    <img src="logo.png" alt="tete de ninjaxx en gros" width="100">
     <h1>C'est Ninjaxx !</h1>
     <h2>Je suis ami de Fuze !</h2>
     <h3>C'est un site trop cool !</h3>
